# ChessPgnReviserTauri

./: README.md  package.json  vue.config.js
.github/workflows/: build_artifacts.yml
src/: App.css  App.vue  constants.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: GameSelector.vue  HistoryComponent.vue  MainZone.vue  ModalDialog.vue  StatusBar.vue
src/i18n/: en.js  es.js  fr.js  index.js
