[package]
name = "app"
version = "1.0.2"
description = "Load your chess Pgn file and try to find moves from your side."
authors = [ "Laurent Bernabe" ]
license = "MIT"
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "dialog-save", "fs-read-text-file", "fs-write-file"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
